<resources>
    <string name="app_name">AppDesign</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvCreateAccount">Create account</string>
    <string name="etUsername">Username</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="btnRegistrate">Registrate</string>
    <string name="tvLogin">Log in</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="tvChangePassword">Change password</string>
    <string name="tvChangePasswordOpinion">The password must be at least 8 characters long and contain Latin letters and numbers.</string>
    <string name="etNewPassword">Enter new password</string>
    <string name="etRepeatPassword">Repeat password</string>
    <string name="save">Save</string>
    <string name="titleItemMainBottomNav">Main</string>
    <string name="titleItemEarningBottomNav">Earning</string>
    <string name="titleItemSupportBottomNav">Support</string>
    <string name="titleItemFAQBottomNav">FAQ</string>
    <string name="titleItemSettingsBottomNav">Settings</string>
    <string name="tvMainEarnings">Main Earnings</string>
    <string name="tvProjectBalance">Project balance</string>
    <string name="tvStatistics">Statistics for today</string>
    <string name="tvW">W</string>
    <string name="tvD">D</string>
    <string name="tvV">V</string>
    <string name="tvM">M</string>
    <string name="tvY">Y</string>
    <string name="tvAll">All</string>
    <string name="btnViewAll">View all</string>
    <string name="tvHours">Hours</string>
    <string name="tvMinutes">Minutes</string>
    <string name="tvSeconds">Seconds</string>
    <string name="tvTransaction">Transaction</string>
    <string name="btnSeeAll">See all</string>
    <string name="tvMedia">Media</string>
    <string name="tvTelegram">Telegram</string>
    <string name="tvDiscord">Discord</string>
    <string name="tvYoutube">YouTube</string>
    <string name="tvTiktok">TikTok</string>
    <string name="tvWebsite">Website</string>
    <string name="tvFacebook">Facebook</string>
    <string name="tvTasks">Tasks</string>
    <string name="tvNews">News</string>
    <string name="tvLatestNews">Latest news</string>
    <string name="tvCrypto">Crypto</string>
    <string name="tvRecommendation">Recommendation</string>
    <string name="tvOperation">Operation</string>
    <string name="etEnterMessage">Enter your message...</string>
    <string name="tvQuestion_1">Question #1</string>
    <string name="tvQuestion_2">Question #2</string>
    <string name="tvQuestion_3">Question #3</string>
    <string name="tvQuestion_4">Question #4</string>
    <string name="tvQuestion_5">Question #5</string>
    <string name="tvQuestion_6">Question #6</string>
    <string name="tvAccount">Account</string>
    <string name="tvEditProfile">Edit profile</string>
    <string name="tvChangePasswordSettings">Change password</string>
    <string name="tvLanguage">Language</string>
    <string name="tvNotification">Notification</string>
    <string name="tvVolume">Volume</string>
    <string name="tvPushNotification">Push notification</string>
    <string name="tvPromotionAndOffers">Promotion and offers</string>
    <string name="TvSendYourReferralCode">Send your referral code to a friend!</string>
    <string name="tvYouLlBothReceive50">You’ll both receive 50 project tokens:</string>
    <string name="tvYouForYourFriend">• You – for your friend’s monthly activity.</string>
    <string name="TvYourFriendForSigningUp">• Your friend – for signing up with your code.</string>
    <string name="tvYouWillAlsoEarn10">You will also earn 10% from the traffic sold by your referral.</string>
    <string name="tvStartEarningTogetherWith">Start earning together with your friends!</string>
    <string name="tvConfirmAction">Confirm action</string>
    <string name="tvYouWillLoseImportant">You will lose important project news and will not be able to compete by promptly responding to innovations</string>
    <string name="tvCancel">Cancel</string>
    <string name="tvTurnItOff">Turn it off</string>
    <string name="tvMale">Male</string>
    <string name="tvFemale">Female</string>
    <string name="tvSpecifyYourGender">Specify your gender</string>
    <string name="tvChooseLanguage">Choose language</string>
    <string name="tvEnglish">English</string>
    <string name="tvRussian">Russian</string>
    <string name="tvRus">Русский</string>
    <string name="tvGerman">German</string>
    <string name="tvDeutsch">Deutsch</string>
    <string name="tvFrench">French</string>
    <string name="tvFran_aise">Française</string>
    <string name="tvSpanish">Spanish</string>
    <string name="tvEspaola">Española</string>
    <string name="tvMyProfile">My profile</string>
    <string name="tvReferralProgram">Referral program</string>
    <string name="tvTransactions">Transactions</string>
    <string name="tvWithdrawalOfFunds">Withdrawal of funds</string>
    <string name="tvProxySettings">Proxy settings</string>
    <string name="tvStartEarning">Start earning today – manage your traffic easily and profitably!</string>
    <string name="tvIfYouReferral">If you’re a blogger, contact support to get a unique referral code with enhanced benefits!</string>
    <string name="tvGetReferralCode">Get referral code</string>
    <string name="tvActiveReferrals">Active referrals</string>
    <string name="tvIfYouReABloggerContact">If you’re a blogger, contact support to get a unique referral code with enhanced benefits!</string>
    <string name="tvGetAUniqueCode">Get a unique code</string>
    <string name="tvAllTransactions">All transactions</string>
    <string name="tvReplenishment">Replenishment</string>
    <string name="tvWriteOff">Write-off</string>
    <string name="tvNoTransactionsYet">No transactions yet</string>
    <string name="tvDuisAuteIrureDolor">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="tvWithdrawalMethod">Withdrawal method</string>
    <string name="tvGiftCardSteam">Gift card STEAM</string>
    <string name="tvInCryptoToTheWallet">In crypto to the wallet</string>
    <string name="tvRequestSent">Request sent</string>
    <string name="tvCheckTheMailFromWhichYouRegistered">Check the mail from which you registered</string>
    <string name="switch_the_toggle_to_the_on_position_to_ensure_your_earnings_continue_even_if_the_app_is_closed_or_running_in_the_background">Switch the toggle to the “On” position to ensure your earnings continue even if the app is closed or running in the background.</string>
    <string name="TvEarningsEnabled">Earnings enabled</string>
    <string name="tvAttention">Attention!</string>
    <string name="attention_we_also_recommend_disabling_battery_optimization_active_optimization_may_disrupt_the_connection_on_many_devices_leading_to_significantly_reduced_earnings">Attention! We also recommend disabling battery optimization. Active optimization may disrupt the connection on many devices, leading to significantly reduced earnings.</string>
    <string name="tvPriceUnitOfMeasurement">Price unit of measurement:</string>
    <string name="tv3072">3072 SXR2 - Mobile traffic</string>
    <string name="tv1536">1536 SXR2 - Wi-Fi traffic</string>
    <string name="tvProxyStatistics">Proxy statistics</string>
    <string name="tvSuccessfulConnections">Successful connections</string>
    <string name="tvNumberOfConnections">Number of connections</string>
    <string name="tvReferalCode">Referal code</string>
    <string name="only_mobile_traffic_is_counted_vpns_and_emulators_are_prohibited_earnings_will_not_be_credited_and_these_actions_will_lead_to_account_suspension">Only mobile traffic is counted; VPNs and emulators are prohibited. Earnings will not be credited, and these actions will lead to account suspension</string>
    <string name="only_traffic_from_your_real_ip_address_is_counted_vpns_and_emulators_are_prohibited_the_earned_funds_will_not_be_credited_and_these_actions_will_result_in_the_account_being_blocked">Only traffic from your real ip address is counted. VPNs and emulators are prohibited. The earned funds will not be credited, and these actions will result in the account being blocked</string>
    <string name="withdraw_the_amount">Withdraw the amount</string>
    <string name="disable_optimization">Disable optimization</string>
</resources>