<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/background_app"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llProfileReferralProgram"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_15dp"
    tools:ignore="MissingConstraints">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/frameLayout11"
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:layout_gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMenuOpen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/hamburger_menu" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:layout_gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnProfilePhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_image"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_photo" />
        </FrameLayout>
        <LinearLayout
            android:id="@+id/llRef"
            android:layout_marginTop="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@id/frameLayout11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButtonBackToSettings"
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:background="@drawable/arrowleft"/>
            <TextView
                android:layout_marginStart="@dimen/_70dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tvReferralProgram"
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/ivRef"
            app:layout_constraintTop_toBottomOf="@id/llRef"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_130dp"
            android:scaleType="centerCrop"
            android:src="@drawable/group_16"/>
        <LinearLayout
            android:layout_marginTop="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/ivRef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:textColor="@color/white"
                android:textSize="@dimen/_20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TvSendYourReferralCode"/>
            <TextView
                android:textColor="@color/white"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvYouLlBothReceive50"/>
            <TextView
                android:textColor="#B2FFFFFF"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvYouForYourFriend"/>
            <TextView
                android:textColor="#B2FFFFFF"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TvYourFriendForSigningUp"/>
            <TextView
                android:layout_marginTop="@dimen/_5dp"
                android:textColor="#B2FFFFFF"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvYouWillAlsoEarn10"/>
            <TextView
                android:layout_marginTop="@dimen/_18dp"
                android:textColor="#B2FFFFFF"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvStartEarningTogetherWith"/>
            <FrameLayout
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="xx11245"
                    android:layout_gravity="start|center"
                    android:layout_marginStart="@dimen/_18dp"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/_16sp"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/input"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="@dimen/_18dp"
                    android:src="@drawable/bookmarkssimple"/>
            </FrameLayout>

            <FrameLayout
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/referrals_background"
                android:padding="@dimen/_15dp">
                <LinearLayout
                    android:layout_gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:textSize="@dimen/_25sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="121"/>
                    <TextView
                        android:textColor="#80FFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Invited referrals"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="@dimen/_2dp"
                    android:layout_height="@dimen/_50dp"
                    android:src="@drawable/line"
                    android:layout_gravity="center"/>
                <LinearLayout
                    android:layout_gravity="end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:textSize="@dimen/_25sp"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="25"/>
                    <TextView
                        android:textColor="#80FFFFFF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvActiveReferrals"/>
                </LinearLayout>
            </FrameLayout>
            <TextView
                android:layout_marginTop="@dimen/_10dp"
                android:textColor="#B2FFFFFF"
                android:textSize="@dimen/_14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvIfYouReABloggerContact"/>
            <FrameLayout
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/materialButtonGetAUnigueCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/tvGetAUniqueCode"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_16sp"
                    android:textColor="@color/white"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/button_background_settings_change"/>
            </FrameLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>